--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -47,7 +47,8 @@ javac.classpath=\
     ${file.reference.httpclient-4.5.13.jar}:\
     ${file.reference.httpcore-4.4.14.jar}:\
     ${file.reference.gson-2.8.7.jar}:\
-    ${file.reference.commons-logging-1.2.jar}
+    ${file.reference.commons-logging-1.2.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
